--- a/source/syscfg/lib/Makefile.am
+++ b/source/syscfg/lib/Makefile.am
@@ -2,7 +2,7 @@ AM_CFLAGS = -D_ANSC_LINUX
 AM_CFLAGS += -D_ANSC_USER
 AM_CFLAGS += -D_ANSC_LITTLE_ENDIAN_
 AM_CFLAGS += -D_COSA_SIM_
-AM_LDFLAGS = -L/var/tmp/pc-rdkb/lib
+AM_LDFLAGS = -fPIC -L/var/tmp/pc-rdkb/lib
 AM_LDFLAGS += -lulog
 
 AM_CPPFLAGS = -Wall -Werror
@@ -10,6 +10,6 @@ ACLOCAL_AMFLAGS = -I m4
 hardware_platform = i686-linux-gnu
 
 lib_LTLIBRARIES = libsyscfg.la
-libsyscfg_la_CPPFLAGS = -I$(top_builddir)/source/cosa/include/linux -I/var/tmp/pc-rdkb/include/dbus-1.0 -I$(top_builddir)/source/igd/arch/intel_usg/boards/rdkb_arm/include -I$(top_builddir)/source/firewall/arch/intel_usg/boards/rdkb_arm/include -I$(top_builddir)/source/firewall/arch/intel_usg/boards/arm_shared/include -I$(top_builddir)/source/hdk2/hdk2/include -I$(top_builddir)/source/pal/upnp/include -I$(top_builddir)/source/pal/xml/include -I$(top_builddir)/source/pal/kernel/include -I$(top_builddir)/source/pal/include -I$(top_builddir)/source/pal/log/include $(CPPFLAGS)
+libsyscfg_la_CPPFLAGS = -I$(top_builddir)/source/cosa/include/linux -I/var/tmp/pc-rdkb/include/dbus-1.0 -I$(top_builddir)/source/igd/arch/intel_usg/boards/rdkb_arm/include -I$(top_builddir)/source/firewall/arch/intel_usg/boards/rdkb_arm/include -I$(top_builddir)/source/firewall/arch/intel_usg/boards/arm_shared/include -I$(top_builddir)/source/hdk2/hdk2/include -I$(top_builddir)/source/pal/upnp/include -I$(top_builddir)/source/pal/xml/include -I$(top_builddir)/source/pal/kernel/include -I$(top_builddir)/source/pal/include -I$(top_builddir)/source/pal/log/include -I$(top_builddir)/source/include $(CPPFLAGS)
 libsyscfg_la_SOURCES = syscfg_lib.c syscfg_mtd.c
-libsyscfg_la_LDFLAGS =  -L/var/tmp/pc-rdkb/lib -lulog
+libsyscfg_la_LDFLAGS = -fPIC -L/var/tmp/pc-rdkb/lib -lulog
