remove firewall_log from build since it is not included in stock ccsp

--- a/source/Makefile.am
+++ b/source/Makefile.am
@@ -1,1 +1,1 @@
-SUBDIRS = igd firewall_log utctx macclone trigger firewall syscfg wmon ulog dhcpproxy pmon utapi sysevent scripts hdk2 hnap pal newhost services
+SUBDIRS = igd utctx macclone trigger firewall syscfg wmon ulog dhcpproxy pmon utapi sysevent scripts hdk2 hnap pal newhost services
