--- a/source/syscfg/lib/Makefile.am
+++ b/source/syscfg/lib/Makefile.am
@@ -2,6 +2,8 @@ AM_CFLAGS = -D_ANSC_LINUX
 AM_CFLAGS += -D_ANSC_USER
 AM_CFLAGS += -D_ANSC_LITTLE_ENDIAN_
 AM_CFLAGS += -D_COSA_SIM_
+AM_CFLAGS += -DSC_POSIX_SEM
+AM_CFLAGS += -fPIC -DPIC
 AM_LDFLAGS = -fPIC -L/var/tmp/pc-rdkb/lib
 AM_LDFLAGS += -lulog
 
