--- a/genautotools.ini
+++ b/genautotools.ini
@@ -1,21 +1,26 @@
-exedirs = "dhcpproxy","firewall_log","firewall","igd","macclone",newhost","pmon","trigger","wmon","cgi","execute_dir","apply_system_defaults","fork_helper","server","proxy","control","cmd","bin","sample"
+exedirs =
+#exedirs = "dhcpproxy","firewall_log","firewall","igd","macclone",newhost","pmon","trigger","wmon","cgi","execute_dir","apply_system_defaults","fork_helper","server","proxy","control","cmd","bin","sample"
 # multiple cmd subdirs will need to be hand-editied to change set_name_
-exenames = "dhcp_proxy","GenFWLog","firewall","IGD","macclone",newhost","pmon","trigger","wmon","index.fcgi","execute_dir","apply_system_defaults","syseventd_fork_helper","syseventd","syseventd_proxy","sysevent","set_name_cmd","utctx_cmd","sample_utctx"
-libdirs = "pal","ulog","libhdkxml","libhdksrv","libhdkcli","libhnap12","hdkadi","lib"
+exenames =
+#exenames = "dhcp_proxy","GenFWLog","firewall","IGD","macclone",newhost","pmon","trigger","wmon","index.fcgi","execute_dir","apply_system_defaults","syseventd_fork_helper","syseventd","syseventd_proxy","sysevent","set_name_cmd","utctx_cmd","sample_utctx"
+libdirs = "ulog","syscfg"
+#libdirs = "pal","ulog","libhdkxml","libhdksrv","libhdkcli","libhnap12","hdkadi","lib"
 # multiple lib subdirs will need to be hand-editied to change set_name_
-libnames = "libpal","libulog","libhdkxml","libhdksrv","libhdkcli","libhnap12","libhdkadi","set_name_lib"
-incdirs = "source/cosa/include/linux","/var/tmp/pc-rdkb/include/dbus-1.0"
+libnames = "libulog","libsyscfg"
+#libnames = "libpal","libulog","libhdkxml","libhdksrv","libhdkcli","libhnap12","libhdkadi","set_name_lib"
+incdirs =
 includes = "include"
-excludes = "unittest"
+excludes = "unittest","sample","pal","hdk2","igd","firewall_log","utctx","macclone","trigger","firewall","wmon","dhcpproxy","pmon","utapi","sysevent","scripts","hnap","newhost","services"
 extensions = "c"
 am_progs = "CC_C_O", "LIBTOOL(libtool)"
 ac_progs = "CC", "INSTALL"
 ac_types =
 ac_funcs = "MALLOC"
 am_cflags = "-D_ANSC_LINUX", "-D_ANSC_USER", "-D_ANSC_LITTLE_ENDIAN_","-D_COSA_SIM_"
-am_ldflags = "-L/var/tmp/pc-rdkb/lib","-lpthread","-lz","-lsrvmgr","-lsyscfg","-lsysevent","-lulog"
+am_ldflags = "-L/var/tmp/pc-rdkb/lib","-lpthread","-lz"
+#am_ldflags = "-L/var/tmp/pc-rdkb/lib","-lpthread","-lz","-lsrvmgr","-lsyscfg","-lsysevent","-lulog"
 addlibs =
-libname = "ccsp_common"
+#libname =
 libflags =
 libsources = 
 pkg_check_modules = 
