--- a/source/syscfg/lib/Makefile.am
+++ b/source/syscfg/lib/Makefile.am
@@ -2,16 +2,17 @@ AM_CFLAGS = -D_ANSC_LINUX
 AM_CFLAGS += -D_ANSC_USER
 AM_CFLAGS += -D_ANSC_LITTLE_ENDIAN_
 AM_CFLAGS += -D_COSA_SIM_
+AM_CFLAGS += -fPIC
 AM_CFLAGS += -DSC_POSIX_SEM
-AM_CFLAGS += -fPIC -DPIC
-AM_LDFLAGS = -fPIC -L/var/tmp/pc-rdkb/lib
-AM_LDFLAGS += -lulog
+AM_LDFLAGS = -L/var/tmp/pc-rdkb/lib
+AM_LDFLAGS += -lpthread
+AM_LDFLAGS += -lz
 
-AM_CPPFLAGS = -Wall -Werror
+AM_CPPFLAGS = -Wall -Werror -fPIC
 ACLOCAL_AMFLAGS = -I m4
 hardware_platform = i686-linux-gnu
 
 lib_LTLIBRARIES = libsyscfg.la
-libsyscfg_la_CPPFLAGS = -I$(top_srcdir)/source/cosa/include/linux -I/var/tmp/pc-rdkb/include/dbus-1.0 -I$(top_srcdir)/source/igd/arch/intel_usg/boards/rdkb_arm/include -I$(top_srcdir)/source/firewall/arch/intel_usg/boards/rdkb_arm/include -I$(top_srcdir)/source/firewall/arch/intel_usg/boards/arm_shared/include -I$(top_srcdir)/source/hdk2/hdk2/include -I$(top_srcdir)/source/pal/upnp/include -I$(top_srcdir)/source/pal/xml/include -I$(top_srcdir)/source/pal/kernel/include -I$(top_srcdir)/source/pal/include -I$(top_srcdir)/source/pal/log/include -I$(top_srcdir)/source/include $(CPPFLAGS)
+libsyscfg_la_CPPFLAGS = -I$(top_srcdir)/source/include $(CPPFLAGS)
 libsyscfg_la_SOURCES = syscfg_lib.c syscfg_mtd.c
-libsyscfg_la_LDFLAGS = -fPIC -L/var/tmp/pc-rdkb/lib -lulog
+libsyscfg_la_LDFLAGS =  -L/var/tmp/pc-rdkb/lib -lpthread -lz
