--- a/source/ulog/Makefile.am
+++ b/source/ulog/Makefile.am
@@ -3,12 +3,14 @@ AM_CFLAGS += -D_ANSC_USER
 AM_CFLAGS += -D_ANSC_LITTLE_ENDIAN_
 AM_CFLAGS += -D_COSA_SIM_
 AM_LDFLAGS = -L/var/tmp/pc-rdkb/lib
+AM_LDFLAGS += -lpthread
+AM_LDFLAGS += -lz
 
 AM_CPPFLAGS = -Wall -Werror
 ACLOCAL_AMFLAGS = -I m4
 hardware_platform = i686-linux-gnu
 
 lib_LTLIBRARIES = libulog.la
-libulog_la_CPPFLAGS = -I$(top_srcdir)/source/cosa/include/linux -I/var/tmp/pc-rdkb/include/dbus-1.0 -I$(top_srcdir)/source/igd/arch/intel_usg/boards/rdkb_arm/include -I$(top_srcdir)/source/firewall/arch/intel_usg/boards/rdkb_arm/include -I$(top_srcdir)/source/firewall/arch/intel_usg/boards/arm_shared/include -I$(top_srcdir)/source/hdk2/hdk2/include -I$(top_srcdir)/source/pal/upnp/include -I$(top_srcdir)/source/pal/xml/include -I$(top_srcdir)/source/pal/kernel/include -I$(top_srcdir)/source/pal/include -I$(top_srcdir)/source/pal/log/include $(CPPFLAGS)
+libulog_la_CPPFLAGS = -I$(top_srcdir)/source/include $(CPPFLAGS)
 libulog_la_SOURCES = ulog.c
-libulog_la_LDFLAGS =  -L/var/tmp/pc-rdkb/lib 
+libulog_la_LDFLAGS =  -L/var/tmp/pc-rdkb/lib -lpthread -lz
