--- a/source/services/lib/Makefile.am
+++ b/source/services/lib/Makefile.am
@@ -11,6 +11,6 @@ ACLOCAL_AMFLAGS = -I m4
 hardware_platform = i686-linux-gnu
 
 lib_LTLIBRARIES = libsrvmgr.la
-libsrvmgr_la_CPPFLAGS = -I$(top_srcdir)/source/cosa/include/linux -I/var/tmp/pc-rdkb/include/dbus-1.0 -I$(top_srcdir)/source/igd/arch/intel_usg/boards/rdkb_arm/include -I$(top_srcdir)/source/firewall/arch/intel_usg/boards/rdkb_arm/include -I$(top_srcdir)/source/firewall/arch/intel_usg/boards/arm_shared/include -I$(top_srcdir)/source/hdk2/hdk2/include -I$(top_srcdir)/source/pal/upnp/include -I$(top_srcdir)/source/pal/xml/include -I$(top_srcdir)/source/pal/kernel/include -I$(top_srcdir)/source/pal/include -I$(top_srcdir)/source/pal/log/include $(CPPFLAGS)
+libsrvmgr_la_CPPFLAGS = -I$(top_srcdir)/source/include $(CPPFLAGS)
 libsrvmgr_la_SOURCES = srvmgr.c
-libsrvmgr_la_LDFLAGS = -L/var/tmp/pc-rdkb/lib -lsysevent -lulog
+libsrvmgr_la_LDFLAGS =  -L/var/tmp/pc-rdkb/lib -lsysevent -lulog
