--- a/source/utctx/lib/Makefile.am
+++ b/source/utctx/lib/Makefile.am
@@ -2,16 +2,15 @@ AM_CFLAGS = -D_ANSC_LINUX
 AM_CFLAGS += -D_ANSC_USER
 AM_CFLAGS += -D_ANSC_LITTLE_ENDIAN_
 AM_CFLAGS += -D_COSA_SIM_
+AM_CFLAGS += -DUTCTX_LOG
 AM_LDFLAGS = -L/var/tmp/pc-rdkb/lib
-AM_LDFLAGS += -lsyscfg
-AM_LDFLAGS += -lsysevent
-AM_LDFLAGS += -lulog
+AM_LDFLAGS += -lsyscfg -lsysevent -lulog 
 
 AM_CPPFLAGS = -Wall -Werror
 ACLOCAL_AMFLAGS = -I m4
 hardware_platform = i686-linux-gnu
 
 lib_LTLIBRARIES = libutctx.la
-libutctx_la_CPPFLAGS = -I$(top_srcdir)/source/cosa/include/linux -I/var/tmp/pc-rdkb/include/dbus-1.0 -I$(top_srcdir)/source/igd/arch/intel_usg/boards/rdkb_arm/include -I$(top_srcdir)/source/firewall/arch/intel_usg/boards/rdkb_arm/include -I$(top_srcdir)/source/firewall/arch/intel_usg/boards/arm_shared/include -I$(top_srcdir)/source/hdk2/hdk2/include -I$(top_srcdir)/source/pal/upnp/include -I$(top_srcdir)/source/pal/xml/include -I$(top_srcdir)/source/pal/kernel/include -I$(top_srcdir)/source/pal/include -I$(top_srcdir)/source/pal/log/include $(CPPFLAGS)
+libutctx_la_CPPFLAGS = -I$(top_srcdir)/source/include -I$(top_srcdir)/source/include/sysevent $(CPPFLAGS)
 libutctx_la_SOURCES = utctx.c utctx_rwlock.c
 libutctx_la_LDFLAGS =  -L/var/tmp/pc-rdkb/lib -lsyscfg -lsysevent -lulog
