--- a/genautotools.ini
+++ b/genautotools.ini
@@ -3,14 +3,14 @@ exedirs =
 # multiple cmd subdirs will need to be hand-editied to change set_name_
 exenames =
 #exenames = "dhcp_proxy","GenFWLog","firewall","IGD","macclone",newhost","pmon","trigger","wmon","index.fcgi","execute_dir","apply_system_defaults","syseventd_fork_helper","syseventd","syseventd_proxy","sysevent","set_name_cmd","utctx_cmd","sample_utctx"
-libdirs = "ulog","syscfg","sysevent","services"
+libdirs = "ulog","syscfg","sysevent","services","utctx","utapi"
 #libdirs = "pal","ulog","libhdkxml","libhdksrv","libhdkcli","libhnap12","hdkadi","lib"
 # multiple lib subdirs will need to be hand-editied to change set_name_
-libnames = "libulog","libsyscfg","libsysevent","libservices"
+libnames = "libulog","libsyscfg","libsysevent","libservices","libutctx","libutapi"
 #libnames = "libpal","libulog","libhdkxml","libhdksrv","libhdkcli","libhnap12","libhdkadi","set_name_lib"
 incdirs =
 includes = "include"
-excludes = "unittest","sample","pal","hdk2","igd","firewall_log","utctx","macclone","trigger","firewall","wmon","dhcpproxy","pmon","utapi","scripts","hnap","newhost"
+excludes = "unittest","sample","pal","hdk2","igd","firewall_log","macclone","trigger","firewall","wmon","dhcpproxy","pmon","scripts","hnap","newhost"
 extensions = "c"
 am_progs = "CC_C_O", "LIBTOOL(libtool)"
 ac_progs = "CC", "INSTALL"
