--- a/source/dhcpproxy/Makefile.am
+++ b/source/dhcpproxy/Makefile.am
@@ -10,11 +10,11 @@ AM_LDFLAGS += -lsyscfg
 AM_LDFLAGS += -lsysevent
 AM_LDFLAGS += -lulog
 
+
 AM_CPPFLAGS = -Wall -Werror
 ACLOCAL_AMFLAGS = -I m4
 hardware_platform = i686-linux-gnu
-
-noinst_LTLIBRARIES = libUtopia_dhcpproxy.la
-libUtopia_dhcpproxy_la_CPPFLAGS = -I$(top_srcdir)/source/cosa/include/linux -I/var/tmp/pc-rdkb/include/dbus-1.0 -I$(top_srcdir)/source/igd/arch/intel_usg/boards/rdkb_arm/include -I$(top_srcdir)/source/firewall/arch/intel_usg/boards/rdkb_arm/include -I$(top_srcdir)/source/firewall/arch/intel_usg/boards/arm_shared/include -I$(top_srcdir)/source/hdk2/hdk2/include -I$(top_srcdir)/source/pal/upnp/include -I$(top_srcdir)/source/pal/xml/include -I$(top_srcdir)/source/pal/kernel/include -I$(top_srcdir)/source/pal/include -I$(top_srcdir)/source/pal/log/include $(CPPFLAGS)
-libUtopia_dhcpproxy_la_SOURCES = packet_util.c dhcp_proxy.c dhcp_util.c dhcp_msg.c
-libUtopia_dhcpproxy_la_LDFLAGS =  -L/var/tmp/pc-rdkb/lib -lpthread -lz -lsrvmgr -lsyscfg -lsysevent -lulog
+bin_PROGRAMS = dhcp_proxy
+dhcp_proxy_CPPFLAGS = -I$(top_srcdir)/source/igd/arch/intel_usg/boards/rdkb_arm/include -I$(top_srcdir)/source/firewall/arch/intel_usg/boards/rdkb_arm/include -I$(top_srcdir)/source/firewall/arch/intel_usg/boards/arm_shared/include -I$(top_srcdir)/source/include $(CPPFLAGS)
+dhcp_proxy_SOURCES = packet_util.c dhcp_proxy.c dhcp_util.c dhcp_msg.c
+dhcp_proxy_LDFLAGS = -L/var/tmp/pc-rdkb/lib -lpthread -lz -lsrvmgr -lsyscfg -lsysevent -lulog
