--- a/source/services/lib/Makefile.am
+++ b/source/services/lib/Makefile.am
@@ -2,7 +2,7 @@ AM_CFLAGS = -D_ANSC_LINUX
 AM_CFLAGS += -D_ANSC_USER
 AM_CFLAGS += -D_ANSC_LITTLE_ENDIAN_
 AM_CFLAGS += -D_COSA_SIM_
-AM_LDFLAGS += -lsysevent
+AM_LDFLAGS = -lsysevent
 AM_LDFLAGS += -lulog
 
 AM_CPPFLAGS = -Wall -Werror
