--- a/source/firewall_log/Makefile.am
+++ b/source/firewall_log/Makefile.am
@@ -5,8 +5,6 @@ AM_CFLAGS += -D_COSA_SIM_
 AM_LDFLAGS = -L/var/tmp/pc-rdkb/lib
 AM_LDFLAGS += -lpthread
 AM_LDFLAGS += -lz
-AM_LDFLAGS += -lsyscfg
-AM_LDFLAGS += -lulog
 
 AM_CPPFLAGS = -Wall -Werror
 ACLOCAL_AMFLAGS = -I m4
@@ -14,4 +12,6 @@ hardware_platform = i686-linux-gnu
 bin_PROGRAMS = GenFWLog
 GenFWLog_CPPFLAGS = -I$(top_srcdir)/source/igd/arch/intel_usg/boards/rdkb_arm/include -I$(top_srcdir)/source/firewall/arch/intel_usg/boards/rdkb_arm/include -I$(top_srcdir)/source/firewall/arch/intel_usg/boards/arm_shared/include -I$(top_srcdir)/source/include $(CPPFLAGS)
 GenFWLog_SOURCES = GenFWLog.c
-GenFWLog_LDFLAGS =  -L/var/tmp/pc-rdkb/lib -lpthread -lz -lsyscfg -lulog
+GenFWLog_LDFLAGS =  -L/var/tmp/pc-rdkb/lib -lpthread -lz
+GenFWLog_LDADD = $(top_builddir)/source/syscfg/lib/libsyscfg.la \
+                 $(top_builddir)/source/ulog/libulog.la
