updates for Belvedere-opensource-4.2.2.20150123 merge (remove old arch directory remnants)

--- a/source/firewall/Makefile.am
+++ b/source/firewall/Makefile.am
@@ -1,5 +1,4 @@
-SUBDIRS = arch
 bin_PROGRAMS = firewall
-firewall_CPPFLAGS = -I$(top_srcdir)/source/igd/arch/intel_usg/boards/rdkb_arm/include -I$(top_srcdir)/source/firewall/arch/intel_usg/boards/rdkb_arm/include -I$(top_srcdir)/source/firewall/arch/intel_usg/boards/arm_shared/include -I$(top_srcdir)/source/include $(CPPFLAGS)
+firewall_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/source/include $(CPPFLAGS)
 firewall_SOURCES = raw_socket_send.c nfq_handler.c firewall.c
 firewall_LDFLAGS =  -L/var/tmp/pc-rdkb/lib -lpthread -lz
