--- a/source/firewall_log/Makefile.am
+++ b/source/firewall_log/Makefile.am
@@ -10,7 +10,7 @@ AM_CPPFLAGS = -Wall -Werror
 ACLOCAL_AMFLAGS = -I m4
 hardware_platform = i686-linux-gnu
 bin_PROGRAMS = GenFWLog
-GenFWLog_CPPFLAGS = -I$(top_srcdir)/source/igd/arch/intel_usg/boards/rdkb_arm/include -I$(top_srcdir)/source/firewall/arch/intel_usg/boards/rdkb_arm/include -I$(top_srcdir)/source/firewall/arch/intel_usg/boards/arm_shared/include -I$(top_srcdir)/source/include $(CPPFLAGS)
+GenFWLog_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/source/include $(CPPFLAGS)
 GenFWLog_SOURCES = GenFWLog.c
 GenFWLog_LDFLAGS =  -L/var/tmp/pc-rdkb/lib -lpthread -lz
 GenFWLog_LDADD = $(top_builddir)/source/syscfg/lib/libsyscfg.la \
