--- a/source/firewall_log/Makefile.am
+++ b/source/firewall_log/Makefile.am
@@ -2,8 +2,7 @@ AM_CFLAGS = -D_ANSC_LINUX
 AM_CFLAGS += -D_ANSC_USER
 AM_CFLAGS += -D_ANSC_LITTLE_ENDIAN_
 AM_CFLAGS += -D_COSA_SIM_
-AM_LDFLAGS = -L/var/tmp/pc-rdkb/lib
-AM_LDFLAGS += -lpthread
+AM_LDFLAGS = -lpthread
 AM_LDFLAGS += -lz
 
 AM_CPPFLAGS = -Wall -Werror
@@ -14,4 +13,5 @@ GenFWLog_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/source/include $(CPP
 GenFWLog_SOURCES = GenFWLog.c
 GenFWLog_LDFLAGS =  -L/var/tmp/pc-rdkb/lib -lpthread -lz
 GenFWLog_LDADD = $(top_builddir)/source/syscfg/lib/libsyscfg.la \
+                 $(top_builddir)/source/sysevent/lib/libsysevent.la \
                  $(top_builddir)/source/ulog/libulog.la
