RDKB-2647: Build when S != B
Reason for change: helps with externalsrc builds

Test Procedure: None

Risks: None

Signed-off-by: Khem Raj <khem_raj@cable.comcast.com>

--- a/source/sysevent/lib/Makefile.am
+++ b/source/sysevent/lib/Makefile.am
@@ -15,5 +15,5 @@ libsysevent_la_CPPFLAGS = -I$(top_srcdir)/source/include $(CPPFLAGS)
 libsysevent_la_SOURCES = libsysevent.c
 libsysevent_la_LDFLAGS = -L/var/tmp/pc-rdkb/lib -lpthread -lz
 
-libsysevent_ladir = $(top_srcdir)/source/include/sysevent
+libsysevent_ladir = $(top_builddir)/source/include/sysevent
 libsysevent_la_HEADERS = libsysevent_internal.h
