RDKB-2873,RDKB-2874,RDKB-2875,RDKB-2876,RDKB-2877 : checkin Reason for change: Enable utopia submodules pal,pmon,service-wan,firewall,macclone,newhost,util, fixed build issues Test Procedure: None Risks: None
Change-Id: I0b77bee24fb2c0a72880b35bc8c5f7c6d203a1f3
Signed-off-by: rthangamani <ramakrishnan.thangamani@wipro.com>

--- a/configure.ac
+++ b/configure.ac
@@ -48,6 +48,8 @@ AC_C_INLINE
 # Checks for library functions.
 AC_FUNC_MALLOC
 
+PKG_CHECK_MODULES([DBUS],[dbus-1 >= 1.6.18])
+
 AC_CONFIG_FILES(
 	source/igd/src/Makefile
 	source/igd/Makefile
@@ -60,14 +62,20 @@ AC_CONFIG_FILES(
 	source/syscfg/lib/Makefile
 	source/syscfg/Makefile
 	source/ulog/Makefile
+	source/newhost/Makefile
+	source/macclone/Makefile
 	source/dhcpproxy/Makefile
 	source/utapi/cmd/Makefile
 	source/utapi/lib/Makefile
 	source/utapi/Makefile
+	source/pmon/Makefile
+	source/pal/Makefile
 	source/sysevent/lib/Makefile
 	source/sysevent/Makefile
 	source/services/lib/Makefile
 	source/services/Makefile
+	source/service_wan/Makefile
+	source/util/Makefile
 	source/Makefile
 	Makefile
 )
