--- a/source/igd/src/Makefile.am
+++ b/source/igd/src/Makefile.am
@@ -22,6 +22,7 @@ AM_CFLAGS += -D_ANSC_LITTLE_ENDIAN_
 AM_CFLAGS += -D_COSA_SIM_
 AM_CFLAGS += -D_LINUX -pipe
 AM_CFLAGS += -DPAL_ULOG
+AM_CFLAGS += -DCONFIG_VENDOR_MODEL
 AM_LDFLAGS = -L/var/tmp/pc-rdkb/lib
 AM_LDFLAGS += -lpthread
 AM_LDFLAGS += -lz
