RDKB-2883,RDKB-2884: Added trigger and Fixed compilation errors.
Reason for change: Fixed compilation errors and added trigger

Test Procedure: Build and Verify.

Risks: None.

Change-Id: If581d197700c2ea6bb887cf76b010df442528299
Signed-off-by: Balaji Punnuru <balaji_punnuru@cable.comcast.com>

--- a/configure.ac
+++ b/configure.ac
@@ -76,6 +76,7 @@ AC_CONFIG_FILES(
 	source/services/Makefile
 	source/service_wan/Makefile
 	source/util/Makefile
+	source/trigger/Makefile
 	source/Makefile
 	Makefile
 )
