--- a/source/trigger/Makefile.am
+++ b/source/trigger/Makefile.am
@@ -16,23 +16,28 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ##########################################################################
-AM_CFLAGS = -D_ANSC_LINUX
-AM_CFLAGS += -D_ANSC_USER
-AM_CFLAGS += -D_ANSC_LITTLE_ENDIAN_
-AM_CFLAGS += -D_COSA_SIM_
-AM_LDFLAGS = -L/var/tmp/pc-rdkb/lib
-AM_LDFLAGS += -lpthread
-AM_LDFLAGS += -lz
-AM_LDFLAGS += -lsrvmgr
-AM_LDFLAGS += -lsyscfg
-AM_LDFLAGS += -lsysevent
-AM_LDFLAGS += -lulog
+AM_CFLAGS = -D_ANSC_LINUX -D_ANSC_USER -D_ANSC_LITTLE_ENDIAN_ -D_COSA_SIM_
 
-AM_CPPFLAGS = -Wall -Werror
+
+AM_CPPFLAGS = -Wall -Werror $(DBUS_CFLAGS)
+
 ACLOCAL_AMFLAGS = -I m4
-hardware_platform = i686-linux-gnu
 
-noinst_LTLIBRARIES = libUtopia_trigger.la
-libUtopia_trigger_la_CPPFLAGS = -I$(top_srcdir)/source/cosa/include/linux -I/var/tmp/pc-rdkb/include/dbus-1.0 -I$(top_srcdir)/source/igd/arch/intel_usg/boards/rdkb_arm/include -I$(top_srcdir)/source/firewall/arch/intel_usg/boards/rdkb_arm/include -I$(top_srcdir)/source/firewall/arch/intel_usg/boards/arm_shared/include -I$(top_srcdir)/source/hdk2/hdk2/include -I$(top_srcdir)/source/pal/upnp/include -I$(top_srcdir)/source/pal/xml/include -I$(top_srcdir)/source/pal/kernel/include -I$(top_srcdir)/source/pal/include -I$(top_srcdir)/source/pal/log/include $(CPPFLAGS)
-libUtopia_trigger_la_SOURCES = trigger.c
-libUtopia_trigger_la_LDFLAGS =  -L/var/tmp/pc-rdkb/lib -lpthread -lz -lsrvmgr -lsyscfg -lsysevent -lulog
+bin_PROGRAMS = trigger
+
+trigger_CPPFLAGS = -I$(top_srcdir)/source/pal/upnp/include \
+                   -I$(top_srcdir)/source/pal/xml/include \
+                   -I$(top_srcdir)/source/pal/kernel/include \
+                   -I$(top_srcdir)/source/pal/include \
+                   -I$(top_srcdir)/source/pal/log/include \
+                   -I$(top_srcdir)/source/ulog \
+                   -I$(top_srcdir)/source/include
+
+trigger_SOURCES = trigger.c
+
+trigger_LDFLAGS =  -lpthread -lz -lnetfilter_queue -lnfnetlink
+
+trigger_LDADD = $(top_builddir)/source/services/lib/libsrvmgr.la \
+             $(top_builddir)/source/sysevent/lib/libsysevent.la \
+             $(top_builddir)/source/ulog/libulog.la \
+             $(top_builddir)/source/syscfg/lib/libsyscfg.la
