RDKB-2897 : Enable service_routed Reason for change: Add build support for service_routed, added Makefile.am Test Procedure: Build Validation Risks: None
Change-Id: I7bece8fd8f7a472cae7db77e59ca75fdfdfc703e
Signed-off-by: rthangamani <ramakrishnan.thangamani@wipro.com>

--- a/configure.ac
+++ b/configure.ac
@@ -75,6 +75,7 @@ AC_CONFIG_FILES(
 	source/services/lib/Makefile
 	source/services/Makefile
 	source/service_wan/Makefile
+	source/service_routed/Makefile
 	source/util/Makefile
 	source/trigger/Makefile
 	source/Makefile
