RDKB-2899 : Build utopia binaries Reason for change: Add build support for scripts to generate binaries needed for utopia Test Procedure: Build Validation Risks: None
Change-Id: I5e59067399542d89d5e9d1977ad4f349bbfa8ae8
Signed-off-by: rthangamani <ramakrishnan.thangamani@wipro.com>

--- a/configure.ac
+++ b/configure.ac
@@ -78,6 +78,9 @@ AC_CONFIG_FILES(
 	source/service_routed/Makefile
 	source/util/Makefile
 	source/trigger/Makefile
+        source/scripts/Makefile
+        source/scripts/init/Makefile
+        source/scripts/init/c_registration/Makefile
 	source/Makefile
 	Makefile
 )
