--- a/source/scripts/init/Makefile.am
+++ b/source/scripts/init/Makefile.am
@@ -16,4 +16,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ##########################################################################
-SUBDIRS = c_registration src service.d syslog_conf
+#SUBDIRS = c_registration src service.d syslog_conf
+SUBDIRS = c_registration
