RDKB-2901,RDKB-2902 : Build missing utopiabinaries Reason for change: Add build support to generate binaries needed for utopia, execute_dir and apply_system_defaults Test Procedure: Build Validation Risks: None
Change-Id: Ib6995fb7ddb18ab977aabd1d6fa9e61f9d06cc8b
Signed-off-by: rthangamani <ramakrishnan.thangamani@wipro.com>

--- a/configure.ac
+++ b/configure.ac
@@ -81,6 +81,9 @@ AC_CONFIG_FILES(
         source/scripts/Makefile
         source/scripts/init/Makefile
         source/scripts/init/c_registration/Makefile
+	source/scripts/init/src/Makefile
+	source/scripts/init/src/apply_system_defaults/Makefile
+	source/scripts/init/src/execute_dir/Makefile
 	source/Makefile
 	Makefile
 )
