--- a/source/scripts/init/Makefile.am
+++ b/source/scripts/init/Makefile.am
@@ -17,4 +17,4 @@
 # limitations under the License.
 ##########################################################################
 #SUBDIRS = c_registration src service.d syslog_conf
-SUBDIRS = c_registration
+SUBDIRS = c_registration src
