ARRISXB3-3511 : Add missing binariers Reason for change: Add missing binariers from sysevent part of utopia Test Procedure: Build Validation Risks: None
Change-Id: I21d0fe51a49251e31a6eba7f79e010883e3aa7aa
Signed-off-by: rthangamani <ramakrishnan.thangamani@wipro.com>

--- a/configure.ac
+++ b/configure.ac
@@ -71,6 +71,10 @@ AC_CONFIG_FILES(
 	source/pmon/Makefile
 	source/pal/Makefile
 	source/sysevent/lib/Makefile
+	source/sysevent/control/Makefile
+	source/sysevent/fork_helper/Makefile
+	source/sysevent/proxy/Makefile
+	source/sysevent/server/Makefile
 	source/sysevent/Makefile
 	source/services/lib/Makefile
 	source/services/Makefile
