ARRISXB3-3521 :sysconfig init failing Reason for change: syscfg binray was not built Test Procedure: Build Validation Risks: None
Signed-off-by: Sukanth sahoo <sukanta_sahoo@cable.comcast.com>
Change-Id: Ibf3dc758a2deb39a3135723706731ec94281dd53

--- a/source/syscfg/cmd/Makefile.am
+++ b/source/syscfg/cmd/Makefile.am
@@ -26,9 +26,10 @@ AM_LDFLAGS += -lz
 
 AM_CPPFLAGS = -Wall -Werror
 ACLOCAL_AMFLAGS = -I m4
-hardware_platform = i686-linux-gnu
 
-noinst_LTLIBRARIES = libUtopia_cmd.la
-libUtopia_cmd_la_CPPFLAGS = -I$(top_srcdir)/source/include $(CPPFLAGS)
-libUtopia_cmd_la_SOURCES = syscfgtest.c.unittest syscfgcmd.c
-libUtopia_cmd_la_LDFLAGS =  -L/var/tmp/pc-rdkb/lib -lpthread -lz
+bin_PROGRAMS = syscfg
+syscfg_CPPFLAGS = -I$(top_srcdir)/source/include $(CPPFLAGS)
+syscfg_SOURCES = syscfgcmd.c
+syscfg_LDFLAGS =  -lpthread -lz \
+                  $(top_srcdir)/source/syscfg/lib/libsyscfg.la \
+                  $(top_srcdir)/source/ulog/libulog.la
