ARRISXB3-3529 : Add missing cflags Reason for change: Including other missing flags from lecagy builds Test Procedure: Build Validation Risks: None
Change-Id: I85b7902672f3ea96c0aff5d19607b0aeba446872
Signed-off-by: rthangamani <ramakrishnan.thangamani@wipro.com>

--- a/source/sysevent/lib/Makefile.am
+++ b/source/sysevent/lib/Makefile.am
@@ -19,6 +19,8 @@
 AM_CFLAGS = -D_ANSC_LINUX
 AM_CFLAGS += -D_ANSC_USER
 AM_CFLAGS += -D_ANSC_LITTLE_ENDIAN_
+AM_CFLAGS += -DSET_REPLY_REQUIRED
+AM_CFLAGS += -DIPV6=1
 AM_CFLAGS += -D_COSA_SIM_
 AM_LDFLAGS = -L/var/tmp/pc-rdkb/lib
 AM_LDFLAGS += -lpthread
