XF3-8: build error in utopia caused by service_wan
Reason for change: Adding ulog dependency to syscfg makefile

Test Procedure: rebuild and verify

Risks: None.

Change-Id: Ibf258afb7966a0496317c72d4d8faf2f9f275c3b
Signed-off-by: Abdul_Shukur@cable.comcast.com

--- a/source/syscfg/lib/Makefile.am
+++ b/source/syscfg/lib/Makefile.am
@@ -34,3 +34,4 @@ lib_LTLIBRARIES = libsyscfg.la
 libsyscfg_la_CPPFLAGS = -I$(top_srcdir)/source/include $(CPPFLAGS)
 libsyscfg_la_SOURCES = syscfg_lib.c syscfg_mtd.c
 libsyscfg_la_LDFLAGS =  -L/var/tmp/pc-rdkb/lib -lpthread -lz
+libsyscfg_la_LIBADD = $(top_builddir)/source/ulog/libulog.la
