XF3-13: Fixed build break in utopia for MIPS builds
Reason for change: The utopia libpal library was not including the upnp library
causing a build break for MIPS builds.

Test Procedure: Verified that the build for utopia succeeds.

Risks: None.

Signed-off-by: scott_angel@cable.comcast.com

Change-Id: I46640d0eded210880d2184774134f364e6737e22

--- a/source/pal/Makefile.am
+++ b/source/pal/Makefile.am
@@ -38,3 +38,5 @@ libpal_la_SOURCES = $(top_srcdir)/source/pal/kernel/src/pal_kernel.c \
                     $(top_srcdir)/source/pal/upnp/src/pal_upnp_device.c \
                     $(top_srcdir)/source/pal/xml/src/pal_xml2s.c \
                     $(top_srcdir)/source/pal/xml/src/pal_xml.c
+
+libpal_la_LDFLAGS = -lupnp
