RDKB-3095: Removing _COSA_SIM_ build macro for non-simulator targets.
Reason for change: Pass it from recipes if needed

Test Procedure: None

Risks: None

Change-Id: I0c96529b766c63b7dfaf954db57020f14ecff291
Signed-off-by: Khem Raj <khem_raj@cable.comcast.com>

--- a/source/sysevent/fork_helper/Makefile.am
+++ b/source/sysevent/fork_helper/Makefile.am
@@ -18,7 +18,7 @@
 ##########################################################################
 bin_PROGRAMS = syseventd_fork_helper
 
-AM_CFLAGS = -D_ANSC_LINUX -D_ANSC_USER -D_ANSC_LITTLE_ENDIAN_ -D_COSA_SIM_ -DIPV6=1
+AM_CFLAGS = -D_ANSC_LINUX -D_ANSC_USER -D_ANSC_LITTLE_ENDIAN_ -DIPV6=1
 AM_CFLAGS += -I$(top_srcdir)/source -I$(top_srcdir)/source/include -I$(top_srcdir)/source/util
 
 ACLOCAL_AMFLAGS = -I m4
