--- a/source/pmon/Makefile.am
+++ b/source/pmon/Makefile.am
@@ -17,7 +17,7 @@
 # limitations under the License.
 ##########################################################################
 bin_PROGRAMS = pmon
-AM_CFLAGS = -D_ANSC_LINUX -D_ANSC_USER -D_ANSC_LITTLE_ENDIAN_ -D_COSA_SIM_
+AM_CFLAGS = -D_ANSC_LINUX -D_ANSC_USER -D_ANSC_LITTLE_ENDIAN_
 
 AM_CPPFLAGS = -Wall -Werror
 ACLOCAL_AMFLAGS = -I m4
