RDKB-3998: Service multinet executable (replacement for service_multinet.sh)
Reason for change: Porting service_multinet executable from legacy to yocto
Test Procedure: Tested on target
Risks: None
Signed-off-by: achelakkode<anoopnair_c@infosys.com>

Change-Id: I4b6574fb0e2de9a275c62363d65adb47cb3e172e

--- a/configure.ac
+++ b/configure.ac
@@ -79,6 +79,7 @@ AC_CONFIG_FILES(
 	source/services/lib/Makefile
 	source/services/Makefile
 	source/service_wan/Makefile
+	source/service_multinet/Makefile
 	source/service_routed/Makefile
 	source/util/Makefile
 	source/trigger/Makefile
