RDKSYSINTSW-1306: utopia: Fix build when S != B
Reason for change: Fixes externalsrc build

Test Procedure: None

Risks: None

Change-Id: Ie95d9f3894b3382a127335df2296176a5e4a0fe7
Signed-off-by: Khem Raj <khem_raj@cable.comcast.com>

--- a/source/syscfg/cmd/Makefile.am
+++ b/source/syscfg/cmd/Makefile.am
@@ -30,5 +30,5 @@ bin_PROGRAMS = syscfg
 syscfg_CPPFLAGS = -I$(top_srcdir)/source/include $(CPPFLAGS)
 syscfg_SOURCES = syscfgcmd.c
 syscfg_LDFLAGS =  -lpthread -lz \
-                  $(top_srcdir)/source/syscfg/lib/libsyscfg.la \
-                  $(top_srcdir)/source/ulog/libulog.la
+                  $(top_builddir)/source/syscfg/lib/libsyscfg.la \
+                  $(top_builddir)/source/ulog/libulog.la
