ARRISXB3-4848 : Need to add generic RPC module to ArrisXb3
Reason for change: Adding RPC module to ArrisXb3
Test Procedure: Start rpcclient with arguments as ARM or ATOM IP with command from both ARM and ATOM in /usr/bin/ and check whether it is connected to rpcserver
Risks: None
Signed-off-by: selvan_krishnamoorthy@cable.comcast.com​

Change-Id: Ie7c099df5342e6f473cc1d4c8662f87fa9b3eacc

--- a/source/util/utils/Makefile.am
+++ b/source/util/utils/Makefile.am
@@ -16,16 +16,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ##########################################################################
-bin_PROGRAMS = service_wan
-
-AM_CFLAGS = -I$(top_srcdir)/source -I$(top_srcdir)/source/include -I$(top_srcdir)/source/util/utils
-
+lib_LTLIBRARIES = libutopiautil.la
+AM_CFLAGS = -I$(top_srcdir)/source -I$(top_srcdir)/source/include -I$(top_srcdir)/source/util
 AM_LDFLAGS =  -lpthread -lz
-
-service_wan_SOURCES = service_wan.c
-
-service_wan_LDADD = $(top_builddir)/source/util/utils/libutopiautil.la \
-                    $(top_builddir)/source/services/lib/libsrvmgr.la \
-                    $(top_builddir)/source/sysevent/lib/libsysevent.la \
-                    $(top_builddir)/source/syscfg/lib/libsyscfg.la \
-                    $(top_builddir)/source/ulog/libulog.la
+libutopiautil_la_SOURCES = util.c
