--- a/source/service_routed/Makefile.am
+++ b/source/service_routed/Makefile.am
@@ -18,13 +18,13 @@
 ##########################################################################
 bin_PROGRAMS = service_routed
 
-AM_CFLAGS = -I$(top_srcdir)/source -I$(top_srcdir)/source/include -I$(top_srcdir)/source/util
+AM_CFLAGS = -I$(top_srcdir)/source -I$(top_srcdir)/source/include -I$(top_srcdir)/source/util/utils
 
 AM_LDFLAGS =  -lpthread -lz
 
 service_routed_SOURCES = service_routed.c
 
-service_routed_LDADD = $(top_builddir)/source/util/libutopiautil.la \
+service_routed_LDADD = $(top_builddir)/source/util/utils/libutopiautil.la \
                     $(top_builddir)/source/services/lib/libsrvmgr.la \
                     $(top_builddir)/source/sysevent/lib/libsysevent.la \
                     $(top_builddir)/source/syscfg/lib/libsyscfg.la \
